Add class to buttons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="container"></div>
     <div class="footer">
-        <button>Black</button>
-        <button>Random</button>
-        <button>Reset</button>
+        <button class="blackb">Black</button>
+        <button class="randomb">Random</button>
+        <button class="resetb">Reset</button>
     </div>
     
 </body>
