--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="popup">Select</button>
     </div>
 
-    <div class="container"></div>
+    <div class="board"></div>
     <div class="footer">
         <button class="blackb">Black</button>
         <button class="randomb">Random</button>
