--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h6>Select the size</h6>
         <button id="popup">Select</button>
     </div>
-
+    <p class="message"></p>
     <div class="board"></div>
     <div class="footer">
         <button class="blackb">Black</button>
