--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h6>Select the size</h6>
         <button id="popup">Select</button>
     </div>
+    <div class="mode">Mode: Coloring</div>
     <p class="message"></p>
     <div class="board"></div>
     <div class="footer">
