--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Etch-A-Sketch</h1>
 
     <div class="header">
-        <h6>Select the size</h6>
+        <h6 class="select">Select the size</h6>
         <button id="popup">Select</button>
     </div>
     <div class="mode">Mode: Coloring</div>
@@ -24,6 +24,10 @@
         <button class="eraserb" onclick="changeColor('white')">Eraser</button>
         <button class="resetb" onclick="resetBoard()">Clear</button>
     </div>
+    
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/arcade-classic');
+        </style>
     
     <script src="script.js"></script>
 </body>
